# EvenDerech2

./: BestSearcherMetrix.cpp  BestSearcherMetrix.h  BfsSearcherMetrix.cpp  BfsSearcherMetrix.h  CMakeLists.txt  DfsSearcherMetrix.cpp  DfsSearcherMetrix.h  README.md  Searchable.h  SearchableMetrix.cpp  SearchableMetrix.h  Searcher.h  State.h  StateOfMetrix.cpp  StateOfMetrix.h  main.cpp
